<resources>
    <string name="app_name">EasyMove</string>

    <string name="auth__login">Connecte-toi</string>
    <string name="auth__register">Créer un compte</string>
    <string name="auth__subtitle">Gérer tous vos déplacements depuis un seul support.</string>
    <string name="auth__login_error">Une erreur est survenue lors de la connexion.</string>

    <string name="auth__register_error">Une erreur est survenue lors de l\'inscription.</string>

    <string name="bluetooth__not_supported_alert_title">Bluetooth non supporté.</string>
    <string name="bluetooth__not_supported_alert_subtitle">Cet appareil ne dispose pas de la technologie Bluetooth.</string>
    <string name="bluetooth__permission_denied_alert_title">Permissions non accordées.</string>
    <string name="bluetooth__permission_denied_alert_subtitle">Vous devez autoriser les permissions pour pouvoir utiliser EasyMove.</string>

    <string name="history">Historique</string>
    <string name="history__date">Date</string>
    <string name="history__start">Départ</string>
    <string name="history__time">Horaire</string>
    <string name="history__price">Coût</string>
    <string name="history__no_data">Aucune donnée concernant vos passages…</string>

    <string name="onboarding_button_next">Suivant</string>
    <string name="onboarding_queue">Évitez les files d\'attente en passant aux bornes sans avoir besoin de sortir votre téléphone grâce à la technologie Bluetooth.</string>
    <string name="onboarding_sync">Acheter ou recharger vos titres de transport via notre application/site web. Visualisez facilement l\'historique de vos déplacements.</string>
    <string name="onboarding_gdpr">Nous collectons uniquement les données indispensables à la bonne exécution de notre service.</string>
    <string name="onboarding__confidentiality">En validant, tu approuves et reconnais la politique de collecte de données.</string>
    <string name="onboarding__dialog_politic">Les informations recueillies sont enregistrées dans un fichier informatisé par EasyMove pour obtenir un ensemble de fonctionnalités nécessitant ces données. La base légale du traitement est obtenue lors de l\'inscription au service EasyMove.\n\nLes données collectées seront communiquées aux seuls destinataires suivants: EasyMove.\n\nLes données sont conservées pendant 2 ans.\n\nVous pouvez accéder aux données vous concernant, les rectifier, demander leur effacement ou exercer votre droit à la limitation du traitement de vos données.\n\nConsultez le site cnil.fr pour plus d’informations sur vos droits.\n\nPour exercer ces droits ou pour toute question sur le traitement de vos données dans ce dispositif, vous pouvez contacter support@easymove.io\n\nSi vous estimez, après nous avoir contactés, que vos droits « Informatique et Libertés » ne sont pas respectés, vous pouvez adresser une réclamation à la CNIL.</string>

    <string name="username">Prénom</string>
    <string name="mail">Email</string>
    <string name="password">Mot de passe</string>
    <string name="register">Inscription</string>
    <string name="login">Connexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collect_politic">Politique de collecte</string>
    <string name="consent">Je consens</string>
    <string name="tickets">Tickets</string>
    <string name="home">Accueil</string>
    <string name="transport_titles">Titres de transport</string>
    <string name="profile">Profile</string>
    <string name="logout">Déconnexion</string>
    <string name="logout_message">Êtes-vous sûr de vouloir vous déconnecter ?</string>

</resources>