<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_200"
    tools:context=".history.HistoryFragment">

    <TextView
        android:id="@+id/history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/history"
        android:textColor="@color/black_500"
        android:textSize="@dimen/font_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/history_list_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_title">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/layout_rounded_top"
            app:layout_constraintBottom_toTopOf="@id/history_recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/history__date"
            android:textColor="@color/black_500"
            app:layout_constraintEnd_toStartOf="@id/history_start_text"
            app:layout_constraintStart_toStartOf="@id/history_list_header"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/history__start"
            android:textColor="@color/black_500"
            app:layout_constraintEnd_toStartOf="@id/history_time_text"
            app:layout_constraintStart_toEndOf="@id/history_date_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/history__time"
            android:textColor="@color/black_500"
            app:layout_constraintEnd_toStartOf="@id/history_price_text"
            app:layout_constraintStart_toEndOf="@id/history_start_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/history__price"
            android:textColor="@color/black_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/history_time_text"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_start_text"
            tools:listitem="@layout/item_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>